Removing 3d change (webkit) on certain elements causing z-index issue

--- a/modules/widgets/side-navigation/nav.scss
+++ b/modules/widgets/side-navigation/nav.scss
@@ -12,7 +12,6 @@ $module: '.side-navigation';
 $pullSide: 6px;
 
 #{$module} {
-  -webkit-transform: translateZ(0px);
   z-index: 1;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility:    hidden;
